--- a/site/gsApi.html
+++ b/site/gsApi.html
@@ -11,8 +11,10 @@
 
 <main>
 	<p>A first implementation is available in Typescript/Javascript for tests.</p>
+
 	<p>For now, <em class="warn">Generic-syntax is in progress and should not be used in production</em>.</p>
 
+	<p>Source is available at <a href="https://github.com/generic-syntax/gs-js">https://github.com/generic-syntax/gs-js</a></p>
 
 	<h2>High level API</h2>
 	<p>TODO</p>
