--- a/site/gs-ml.html
+++ b/site/gs-ml.html
@@ -42,7 +42,7 @@
 <pre>&lt;html lang=en[
 &lt;head>
 &lt;body[
-    &lt;%php"ECHO 'Hello World!';">
+    &lt;%php"ECHO 'Hello GS!';">
   ]>
 ]></pre>
 	</ml-gsml-compare>
@@ -57,7 +57,7 @@
 		<li>In XML, value for boolean attributes are not required.</li>
 	</ul>
 
-	<h3>Mixed content and DOM instanciation overhead</h3>
+	<h3>Mixed content and DOM instantiation overhead</h3>
 	<ml-gsml-compare format="gsml" output="html">
 <pre>&lt;div[
 	&lt;p `&lt;em`consecutive`> &lt;span`words`>`>
@@ -65,18 +65,18 @@
 	</ml-gsml-compare>
 
 	<p>XML and HTML do not differentiate insignificant white spaces for human readability (indentations) and significant spaces text nodes.</p>
-	<p>In this example the space between <code>em</code> and <code>span</code> tags is semanticaly needed whereas space betwwen <code>div</code>
+	<p>In this example the space between <code>em</code> and <code>span</code> tags is semantically needed whereas space between <code>div</code>
 		and <code>p</code> is not.</p>
-	<p>That's why when DOM is instanciated, white spaces text nodes are always built but many are useless
+	<p>That's why when DOM is instantiated, white spaces text nodes are always built but many are useless
 		and consumes unnecessarily time and memory.</p>
 
 	<p>In GS, authors use different body types node:</p>
 	<ul>
-		<li>In the list body type <code>[]</code>, white spaces are never significant and never be instanciated (as in JSON)</li>
+		<li>In the list body type <code>[]</code>, white spaces are never significant and never be instantiated (as in JSON)</li>
 		<li>In the mixed body type <code>``</code>, all characters sequence between nodes <code><></code> define a significant text node.
 	</ul>
 
-	<p>Note: in GS this example can also be writen with a list node <code>[]</code> and a simple text node <code>""</code>:</p>
+	<p>Note: in GS this example can also be written with a list node <code>[]</code> and a simple text node <code>""</code>:</p>
 	<ml-gsml-compare format="gsml" output="html">
 <pre>&lt;div[
 	&lt;p [
@@ -90,17 +90,17 @@
 
 	<h3>Mixed-content and editors auto-formatting</h3>
 
-	<p>Editors automatic reformat and reindent features are really useful. But these features do not work perfectly for XML and HTML
-		due to the undifferenciation of text nodes types:
+	<p>Editors automatic re-format and re-indent features are really useful. But these features don't work perfectly for XML and HTML due
+		to undifferentiating text type nodes:
 	<ul>
 		<li>pure white spaces,</li>
-		<li>text that can be reindented (like paragraph)</li>
+		<li>text that can be re-indented (like paragraph)</li>
 		<li>and text nodes where spaces must be preserved (like code fragment in <code>pre</code> tags in html).</li>
 	</ul>
 	</p>
 
-	<p>In XML, this issue is resolved with the decarative and inelegant <code>xml:space="preserve"</code> attribute, but its inheritable behavior contrary the modulatirty
-		principle and is source of regressions (those who edit big xml files like xsl where some parts must never be reindented well known this issue...)</p>
+	<p>In XML, this issue is resolved with the declarative and inelegant <code>xml:space="preserve"</code> attribute, but its inheritable behavior contrary the modularity
+		principle and is source of regressions (those who edit big xml files like xsl where some parts must never be re-indented well known this issue...)</p>
 
 	<p>Since HTML4 is a <a href="https://en.wikipedia.org/wiki/Domain-specific_language">DSL</a>, editors must know each tag name
 		and the issue is partially worked around (while authors don't intent to override standard html tags with <code>white-space</code> css property).</p>
@@ -119,9 +119,9 @@
 	</code-mirror>
 
 	<p>This html fragment with a web-component is issued of this page (see the first example). The <code>&lt;pre></code> tag
-		in the <code>&lt;ml-gsml-compare></code> web-component is useless but is added just for blocking the auto text reindentation in editors!</p>
+		in the <code>&lt;ml-gsml-compare></code> web-component is useless but is added just for blocking the auto text indentation in editors!</p>
 
-	<p>Here is the same example if this html page was written in GS, <code>&lt;pre></code> tag can be ommited because body node can be correctly typed in GS:</p>
+	<p>Here is the same example if this html page was written in GS, <code>&lt;pre></code> tag can be omitted because body node can be correctly typed in GS:</p>
 	<gs-viewer class="border">
 	<pre>&lt;ml-gsml-compare format=xml !"&lt;svg:svg xmlns:svg="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 32 32">
   &lt;svg:g>
@@ -142,7 +142,7 @@
 		</gs-viewer>
 	</div>
 
-	<h3>Comments restrictions and imbrications</h3>
+	<h3>Comments restrictions and imbrication</h3>
 	<ml-gsml-compare format="gsml" output="html">
 <pre>
 &lt;section [
@@ -170,7 +170,7 @@
 		</div>
 
 		<div class="border s1 scroll">
-			<div class="head">XML: '--' is forbiden in a comment!</div>
+			<div class="head">XML: '--' is forbidden in a comment!</div>
 			<code-mirror mode="xml">
 <pre>
 &lt;section>
@@ -283,10 +283,10 @@
 
 	<h3>Generic parsing and serializing</h3>
 
-	<p>As opposed to XML and JSON, the main html issue is the needs of dedicated and complex parser and serializier with many special edge cases.</p>
+	<p>As opposed to XML and JSON, the main html issue is the needs of dedicated and complex parser and serializer with many special edge cases.</p>
 
-	<p>GS offers a generic and simple syntax: parsers and serializiers can easily be implemented in many languages.
-		For example a GS event driven parser implemnted in Typescript is less than 700 lines of code, comments included, and a minified serializer is about 200 lines.</p>
+	<p>GS offers a generic and simple syntax: parsers and serializers can easily be implemented in many languages.
+		For example a GS event driven parser implemented in Typescript is less than 700 lines of code, comments included, and a minified serializer is about 200 lines.</p>
 
 	<p>Are these HTML dedicated parsing rules useful for authors ?</p>
 
@@ -336,7 +336,7 @@
 <pre><#THREAD [
 &lt;comment by=mark date=2019-12-12 [
  &lt;p`Comment with &lt;em`rich html in GS format`>.`>
- &lt;p`Usefull with an IDE that instrument it!`>
+ &lt;p`Useful with an IDE that instrument it!`>
 ]>
 &lt;comment by=john date=2019-12-18 [
  &lt;p`Marvelous😉`>
@@ -369,13 +369,13 @@
 </pre>
 	</gs-viewer>
 
-	<p>As in JSON, node names and key attributes are illimited by escape mechanisms.</p>
+	<p>As in JSON, node names and key attributes are unlimited by escape mechanisms.</p>
 
 	<p>Of course, currently you can't use these free names if you want to transform your GS to DOM or XML/HTML.</p>
 
 	<h3>Multi-root document</h3>
 	<p>Like HTML, but as opposed to XML, GS document (or file) does not impose a single root element and can contain a set of nodes (see the examples above).
-		It can be instantiated in DOM as a <code>DocumentFragement</code>.</p>
+		It can be instantiated in DOM as a <code>DocumentFragment</code>.</p>
 
 	<h3>Tail attributes</h3>
 	<gs-viewer class="border">
