--- a/site/gs-om.html
+++ b/site/gs-om.html
@@ -40,7 +40,7 @@
 			<code-mirror mode="javascript">
 <pre>{
 	"@type": "http://schema.org/Article",
-	"identifer": "5Pl8d4"
+	"identifier": "5Pl8d4"
 	"author": "Author name",
 	"datePublished": "2020-1-1",
 	"image": {
@@ -79,7 +79,7 @@
 	<h2>GS-OM language</h2>
 
 	<p>GS-OM is a secured library for building and serializing a complex and recursive graph of typed objects.
-		At parsing stage, according to its configuration, typed objects are instanciated, properties are assigned
+		At parsing stage, according to its configuration, typed objects are instantiated, properties are assigned
 		and methods explicitly authorized can be called.</p>
 
 	<gs-viewer class="border scroll">
