--- a/site/gs-on.html
+++ b/site/gs-on.html
@@ -28,7 +28,7 @@
 	<p>Highlights:</p>
 	<ul>
 		<li>Quoting keys is not always required</li>
-		<li>Comma separtor is removed</li>
+		<li>Comma separator is removed</li>
 		<li>Null value can be omitted</li>
 		<li>GS size is smaller</li>
 	</ul>
@@ -44,7 +44,7 @@ not in GS."
 	</json-gson-compare>
 
 	<p>The GS bounded escaping principle is similar to the <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Type" target="_blank">Multiparts content type</a>.
-		The content beetween the boundaries is raw and never escaped. <code>!"</code> is the simplest boundary, if this character sequence is present in the content,
+		The content between the boundaries is raw and never escaped. <code>!"</code> is the simplest boundary, if this character sequence is present in the content,
 		any character (except <code>"</code>) can be inserted in the middle:
 		<code>!!"</code>, <code>!."</code>, <code>!°"</code>, <code>!xyz"</code>, <code>!☠"</code>...
 	</p>
@@ -60,11 +60,11 @@ not in GS."
   1
   {
     a=2
-    <#TODO by=john date=2019-12-10 "A typed comment with metadatas">
+    <#TODO by=john date=2019-12-10 "A typed comment with metadata">
     b="x"
     <#DISCUSS by=mark date=2019-12-12 [
     &lt;p`Comment with &lt;em`rich html in GS-ML format`>.`>
-    &lt;p`Usefull with an IDE that instrument it!`>
+    &lt;p`Useful with an IDE that instrument it!`>
     ]>
   }
 ]</pre>
