--- a/site/index.html
+++ b/site/index.html
@@ -56,9 +56,9 @@
     &lt;h1`Title`>
     &lt;p`Paragraph with &lt;em`inline tag`>.`>
     &lt;textarea disabled !"A "bounded escape"
-      mecanism allow to never have any
+      mechanism allow to never have any
       character escaped, &ltcool!>!">
-    &lt;p ~`The formattable flag &lt;code`~`> explicitly indicates to editors this text can be formated and indented.`>
+    &lt;p ~`The formattable flag &lt;code`~`> explicitly indicates to editors this text can be formatted and indented.`>
   ]>
 ]></pre>
 			</gs-viewer>
