site: add gs parser (11kb minified js)

--- a/site/gs-ml.html
+++ b/site/gs-ml.html
@@ -286,7 +286,7 @@
 	<p>As opposed to XML and JSON, the main html issue is the needs of dedicated and complex parser and serializer with many special edge cases.</p>
 
 	<p>GS offers a generic and simple syntax: parsers and serializers can easily be implemented in many languages.
-		For example a GS event driven parser implemented in Typescript is less than 700 lines of code, comments included, and a minified serializer is about 200 lines.</p>
+		For example a GS event driven parser implemented in Typescript is less than 700 lines of code (11kb minified js), and a minified serializer is about 200 lines.</p>
 
 	<p>Are these HTML dedicated parsing rules useful for authors ?</p>
 
