--- a/site/gsApi.html
+++ b/site/gsApi.html
@@ -14,7 +14,7 @@
 
 	<p>For now, <em class="warn">Generic-syntax is in progress and should not be used in production</em>.</p>
 
-	<p>Source is available at <a href="https://github.com/generic-syntax/gs-js">https://github.com/generic-syntax/gs-js</a></p>
+	<p>Source code is available at <a href="https://github.com/generic-syntax/gs-js">https://github.com/generic-syntax/gs-js</a></p>
 
 	<h2>High level API</h2>
 	<p>TODO</p>
