--- a/site/index.html
+++ b/site/index.html
@@ -37,7 +37,7 @@
 		<div class="side s1">
 			<h2>GS for JSON</h2>
 			<p>JSON can be written in Generic-Syntax.</p>
-			<p>GS is more optimized and allow new features like comments.</p>
+			<p>GS is more optimized and allows new features like comments.</p>
 			<div class="seeMoreArea">
 				<a class="seeMoreBtn" href="gs-on.html">See more...</a>
 			</div>
@@ -66,7 +66,7 @@
 		<div class="side s1">
 			<h2>GS for HTML and XML</h2>
 			<p>Generic-Syntax is a great replacement for HTML and XML.</p>
-			<p>GS resolve many flaws of these two ancestors and is more optimized.</p>
+			<p>GS resolves many flaws of these two ancestors and is more optimized.</p>
 			<p>GS is generic and simple to parse and serialize in any language (unlike HTML).</p>
 			<div class="seeMoreArea">
 				<a class="seeMoreBtn" href="gs-ml.html">See more...</a>
@@ -97,8 +97,8 @@
 		<div class="side s1">
 			<h2>GS for Object Mapping</h2>
 			<p>Neither JSON nor XML are well suited for Object Mapping.</p>
-			<p>Generic-syntax combine map properties of JSON and named nodes of XML
-				and offers new efficient syntax for specific purpose like serializing typed objects graph.</p>
+			<p>Generic-syntax combines map properties of JSON and named nodes of XML
+				and offers a new and efficient syntax for specific purpose like serializing typed object graphs.</p>
 			<div class="seeMoreArea">
 				<a class="seeMoreBtn" href="gs-om.html">See more...</a>
 			</div>
@@ -108,14 +108,14 @@
 	<section class="panel color3">
 		<div class="side s1 center">
 			<h2>GS principles</h2>
-			<p>In GS all is <span class="symbol">node</span>:</p>
+			<p>In GS everything is a <span class="symbol">node</span>:</p>
 			<div class="syntax bigger"><span class="symbol">node</span> = '<span class="char"><</span>' <span class="symbol">specialType</span>? <span class="symbol">name</span>? <span class="symbol">attribute</span>* <span
 					class="symbol">body</span>? <span class="symbol">attribute</span>*
 				'<span class="char">></span>'
 			</div>
-			<p>All node parts are optionnals, when a node has only a <span class="syntax"><span class="symbol">body</span></span>, it can be simplified:</p>
+			<p>All node parts are optional, when a node has only a <span class="syntax"><span class="symbol">body</span></span>, it can be simplified:</p>
 			<div class="syntax bigger"><span class="symbol">simpleNode</span> = <span class="symbol">body</span> | <span class="symbol">rawCharacters</span></div>
-			<p><span class="syntax"><span class="symbol">body</span></span> can be a terminal text <code>""</code>, a list of nodes <code>[]</code>,
+			<p><span class="syntax">A <span class="symbol">body</span></span> can be a terminal text <code>""</code>, a list of nodes <code>[]</code>,
 				a map of properties <code>{}</code>, or a mixed content for paragraph and inline tags <code>``</code>.</code></p>
 			<p><span class="syntax"><span class="symbol">rawCharacters</span></span> is the limited characters set for names, values and body text usable without delimiters:</p>
 			<div class="syntax bigger"><span class="symbol">rawCharacters</span> = <span class="symbol">[a-zA-Z0-9_:\-./]+</span></div>
@@ -155,7 +155,7 @@ console.log(GSML.stringify('xml', domFragment, {serialize:{
 		<div class="side s1">
 			<h2>GS API</h2>
 			<p>A high level API provides simple parsing and serialization methods.</p>
-			<p>A low level API based on a logical and a physical events driven processing provides many more options and extensibility.</p>
+			<p>A low level API based on a logical and a physical event-driven process provides many more options and extendability.</p>
 			<p>A first implementation is available in Typescript/Javascript for tests. <em class="warn">Generic-Syntax is not ready for production.</em></p>
 			<div class="seeMoreArea">
 				<a class="seeMoreBtn" href="gsApi.html">See more...</a>
